--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.0.6",
     "@angular/platform-browser-dynamic": "^6.0.6",
     "@angular/router": "^6.0.6",
+    "angular2-moment": "^1.9.0",
     "core-js": "^2.5.7",
     "file-saver": "^1.3.8",
     "hammerjs": "^2.0.8",
